<resources>
    <string name="app_name">ShroomPoint</string>
    <string name="title_champions">Champions</string>
    <string name="title_logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="a_mushroom">A mushroom</string>
    <string name="loginSub">A LoL Companion</string>
    <string name="txt_champion_image">Champion Image</string>
    <string name="login">Log In</string>

    //For Champ Verbose Fragment
    <string name="style">Style: </string>
    <string name="space">       </string>
    <string name="bio">Bio:</string>
    <string name="stats">Stats:</string>
    <string name="difficulty">Difficulty: </string>
    <string name="damage">Damage: </string>
    <string name="durability">Durability: </string>
    <string name="crowd_control">Crowd Control: </string>
    <string name="mobility">Mobility: </string>
    <string name="utility">Utility: </string>
    <string name="abilities_passive_q_w_e_r">Abilities (Passive, Q, W, E, R):</string>
    <string name="passive">Passive</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="champion_splash_art">Champion Splash Art</string>
    <string name="passive_thumbnail_art">Passive Thumbnail Art</string>
    <string name="q_ability_art">Q Ability Art</string>
    <string name="w_ability_art">W Ability Art</string>
    <string name="e_ability_art">E Ability Art</string>
    <string name="r_ability_art">R Ability Art</string>
    //Profile fragment
    <string name="favorite_champions">Favorite Champions</string>
    //Edit Bio Dialog
    <string name="edit_button">edit button</string>
    <string name="user_s_bio">Enter Bio Here…</string>
    <string name="enter_bio">Enter Bio: (max 250)</string>
    <string name="asSort">Assasin Sort Button</string>
    <string name="sort_fighters">Sort Fighters</string>
    <string name="sort_all">Sort All</string>
    <string name="sort_mages">Sort Mages</string>
    <string name="sort_marksmen">Sort Marksmen</string>
    <string name="sort_support">Sort Support</string>
    <string name="sort_tank">Sort Tank</string>
    <string name="txtsorttype">All</string>
    <string name="set_fav">Set Fav</string>
    <string name="set_champ_as_fav">Set Champ as Fav</string>
    <string name="fav_status">NonFavorite</string>


</resources>