<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChampionVerboseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgChampionSplash">

            <ImageView
                android:id="@+id/imgChampionSplash"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:contentDescription="@string/champion_splash_art"
                android:padding="2dp"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/txtChampName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgChampionSplash"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtChampTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtChampName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="italic" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_below="@id/txtChampTitle"/>

            <RelativeLayout
                android:id="@+id/bioArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtChampTitle"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txtBioLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/bio"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtBioLabel"
                    android:paddingHorizontal="20dp"/>

            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_below="@id/bioArea"/>

            <GridLayout
                android:id="@+id/statArea"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/bioArea"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">


                <TextView
                    android:id="@+id/txtStatLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/stats"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txtDifficultyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/difficulty" />

                <TextView
                    android:id="@+id/txtDifficultyNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:paddingEnd="90dp"/>

                <TextView
                    android:id="@+id/txtDamageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/damage" />

                <TextView
                    android:id="@+id/txtDamageNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:paddingEnd="90dp"/>

                <TextView
                    android:id="@+id/txtDurabilityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:text="@string/durability" />

                <TextView
                    android:id="@+id/txtDurabilityNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:paddingEnd="90dp"/>

                <TextView
                    android:layout_row="3"
                    android:layout_column="3"
                    android:text="@string/space"/>

                <TextView
                    android:id="@+id/txtCCLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:text="@string/crowd_control" />

                <TextView
                    android:id="@+id/txtCCNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="5"/>

                <TextView
                    android:id="@+id/txtMobilityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="4"
                    android:text="@string/mobility" />

                <TextView
                    android:id="@+id/txtMobilityNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="5"/>

                <TextView
                    android:id="@+id/txtUtilityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="4"
                    android:text="@string/utility" />

                <TextView
                    android:id="@+id/txtUtilityNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="5"/>

            </GridLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_below="@id/statArea"/>

            <TextView
                android:id="@+id/txtAbilityLabel"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:layout_below="@id/statArea"
                android:paddingStart="10sp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/abilities_passive_q_w_e_r"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/AbilityArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAbilityLabel"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <RelativeLayout
                    android:id="@+id/PassiveArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20sp"
                    android:paddingTop="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passive"
                        android:id="@+id/txtPassiveLabel"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:id="@+id/imgPassive"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txtPassiveLabel"
                        android:contentDescription="@string/passive_thumbnail_art" />

                    <TextView
                        android:id="@+id/txtPassiveName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPassiveLabel"
                        android:layout_toEndOf="@id/imgPassive"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtPassiveDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPassiveName"
                        android:layout_toEndOf="@id/imgPassive"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/QArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20sp"
                    android:paddingTop="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q"
                        android:id="@+id/txtQLabel"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:id="@+id/imgQ"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txtQLabel"
                        android:contentDescription="@string/q_ability_art" />

                    <TextView
                        android:id="@+id/txtQName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtQLabel"
                        android:layout_toEndOf="@id/imgQ"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtQDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtQName"
                        android:layout_toEndOf="@id/imgQ"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/WArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20sp"
                    android:paddingTop="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/w"
                        android:id="@+id/txtWLabel"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:id="@+id/imgW"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txtWLabel"
                        android:contentDescription="@string/w_ability_art" />

                    <TextView
                        android:id="@+id/txtWName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtWLabel"
                        android:layout_toEndOf="@id/imgW"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtWDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtWName"
                        android:layout_toEndOf="@id/imgW"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/EArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20sp"
                    android:paddingTop="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/e"
                        android:id="@+id/txtELabel"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:id="@+id/imgE"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txtELabel"
                        android:contentDescription="@string/e_ability_art" />

                    <TextView
                        android:id="@+id/txtEName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtELabel"
                        android:layout_toEndOf="@id/imgE"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtEDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtEName"
                        android:layout_toEndOf="@id/imgE"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20sp"
                    android:paddingTop="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r"
                        android:id="@+id/txtRLabel"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:id="@+id/imgR"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/txtRLabel"
                        android:contentDescription="@string/r_ability_art" />

                    <TextView
                        android:id="@+id/txtRName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtRLabel"
                        android:layout_toEndOf="@id/imgR"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtRDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtRName"
                        android:layout_toEndOf="@id/imgR"
                        android:paddingStart="5sp"
                        android:paddingEnd="5dp"
                        android:textSize="12sp" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>